sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: not found: value i
    if (getCouleur(i) == BLEU){
                   ^DutchFlagAlgo:8: error: not found: value i
      echange(i, apresBleu)
              ^DutchFlagAlgo:10: error: not found: value i
    } else if (getCouleur(i) == ROUGE){
                          ^DutchFlagAlgo:11: error: not found: value i
      echange(i, blancRouge)
              ^DutchFlagAlgo:12: error: not found: value i
      echange(i,avantBlanc)
              ^DutchFlagAlgo:16: error: not found: value i
      echange(i, avantBlanc)
              ^