sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var apresBleu:Int = 0
  var avantBlanc:Int= getTaille() -1
  var blancRouge:Int  = getTaille() -1
  while (apresBleu <= avantBlanc){
    if (getCouleur(i) == BLEU){
      echange(i, apresBleu)
      apresBleu = apresBleu +1
    } else if (getCouleur(i) == ROUGE){
      echange(i, blancRouge)
      echange(i,avantBlanc)
      blancRouge = blancRouge -1
      avantBlanc = avantBlanc -1
    } else{
      echange(i, avantBlanc)
      avantBlanc = avantBlanc -1
    }
  }
}